Update getting started to Wanaku 0.0.3

--- a/01-getting-started/docker-compose.yml
+++ b/01-getting-started/docker-compose.yml
@@ -1,38 +1,103 @@
 version: '3'
 
 services:
+  valkey:
+    image: valkey/valkey
+    ports:
+      - "6379:6379"
+
   wanaku-routing-http-service:
-    image: quay.io/wanaku/wanaku-routing-http-service
+    depends_on:
+      - valkey
+    image: quay.io/wanaku/wanaku-routing-http-service:wanaku-0.0.3
+    environment:
+      VALKEY_HOST: valkey
+      VALKEY_PORT: 6379
+      VALKEY_TIMEOUT: 10
     ports:
       - "9000:9000"
-# Uncomment when using plain Docker, without Docker Desktop 
-#    extra_hosts:
-#      - "host.docker.internal:host-gateway"
-
   wanaku-routing-yaml-route-service:
-    image: quay.io/wanaku/wanaku-routing-yaml-route-service
+    depends_on:
+      - valkey
+    image: quay.io/wanaku/wanaku-routing-yaml-route-service:wanaku-0.0.3
+    environment:
+      VALKEY_HOST: valkey
+      VALKEY_PORT: 6379
+      VALKEY_TIMEOUT: 10
     ports:
       - "9001:9000"
-# Uncomment when using plain Docker, without Docker Desktop 
-#    extra_hosts:
-#      - "host.docker.internal:host-gateway"
+
+  # Uncomment if you want to enable Kafka
+  wanaku-routing-kafka-service:
+    depends_on:
+      - valkey
+    image: quay.io/wanaku/wanaku-routing-kafka-service:wanaku-0.0.3
+    environment:
+      VALKEY_HOST: valkey
+      VALKEY_PORT: 6379
+      VALKEY_TIMEOUT: 10
+    ports:
+      - "9003:9000"
+
+  wanaku-routing-tavily-service:
+    depends_on:
+      - valkey
+    image: quay.io/wanaku/wanaku-routing-tavily-service:wanaku-0.0.3
+    environment:
+      VALKEY_HOST: valkey
+      VALKEY_PORT: 6379
+      VALKEY_TIMEOUT: 10
+    ports:
+      - "9006:9000"
 
   wanaku-provider-file:
-    image: quay.io/wanaku/wanaku-provider-file
+    depends_on:
+      - valkey
+    image: quay.io/wanaku/wanaku-provider-file:wanaku-0.0.3
+    environment:
+      VALKEY_HOST: valkey
+      VALKEY_PORT: 6379
+      VALKEY_TIMEOUT: 10
     ports:
       - "9002:9000"
-# Uncomment when using plain Docker, without Docker Desktop 
-#    extra_hosts:
-#      - "host.docker.internal:host-gateway"
+
+  wanaku-provider-ftp:
+    depends_on:
+      - valkey
+    image: quay.io/wanaku/wanaku-provider-ftp:wanaku-0.0.3
+    environment:
+      VALKEY_HOST: valkey
+      VALKEY_PORT: 6379
+      VALKEY_TIMEOUT: 10
+    ports:
+      - "9004:9000"
+
+  # Uncomment the lines below to enable access to AWS S3
+  wanaku-provider-s3:
+    depends_on:
+      - valkey
+    image: quay.io/wanaku/wanaku-provider-s3:wanaku-0.0.3
+    environment:
+      VALKEY_HOST: valkey
+      VALKEY_PORT: 6379
+      VALKEY_TIMEOUT: 10
+    ports:
+      - "9005:9000"
 
   wanaku-router:
     depends_on:
       - wanaku-routing-http-service
+      - wanaku-routing-kafka-service
+      - wanaku-routing-tavily-service
       - wanaku-routing-yaml-route-service
       - wanaku-provider-file
-    image: quay.io/wanaku/wanaku-router
+      - wanaku-provider-ftp
+      - wanaku-provider-s3
+      - valkey
+    image: quay.io/wanaku/wanaku-router:wanaku-0.0.3
+    environment:
+      VALKEY_HOST: valkey
+      VALKEY_PORT: 6379
+      VALKEY_TIMEOUT: 10
     ports:
       - "8080:8080"
-# Uncomment when using plain Docker, without Docker Desktop 
-#    extra_hosts:
-#      - "host.docker.internal:host-gateway"
