Added environment variable for the Tavily API key

--- a/01-getting-started/docker-compose.yml
+++ b/01-getting-started/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       VALKEY_HOST: valkey
       VALKEY_PORT: 6379
       VALKEY_TIMEOUT: 10
+#      TAVILY_API_KEY: include-you-api-key-here
     ports:
       - "9006:9000"
 
