--- a/03-camel-assistant/rag-database/docker-compose.yaml
+++ b/03-camel-assistant/rag-database/docker-compose.yaml
@@ -53,7 +53,7 @@ services:
     volumes:
       - qdrant_storage:/qdrant/storage:z
   ingestion-sink:
-    image: quay.io/orpiske/camel-data-loader-ingestion-sink
+    image: quay.io/orpiske/camel-data-loader-ingestion-sink:release-prep
     pull_policy: always
     depends_on:
       - kafka
@@ -66,7 +66,7 @@ services:
       CAMEL_DATALOADER_EMBEDDING_PROVIDER_URL: http://host.docker.internal:11434
       CAMEL_DATALOADER_EMBEDDING_PROVIDER_MODEL_NAME: nomic-embed-text:latest
   ingestion-source-plain-text:
-    image: quay.io/orpiske/camel-data-loader-plain-text-source
+    image: quay.io/orpiske/camel-data-loader-plain-text-source:release-prep
     pull_policy: always
     depends_on:
       - kafka
