--- a/03-camel-assistant/wanaku/docker-compose.yaml
+++ b/03-camel-assistant/wanaku/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     depends_on:
       wanaku-router:
         condition: service_healthy
-    image: quay.io/wanaku/wanaku-tool-service-http:latest
+    image: quay.io/wanaku/wanaku-tool-service-http:release-prep
     pull_policy: always
     ports:
       - "9000:9000"
@@ -20,7 +20,7 @@ services:
     depends_on:
       wanaku-router:
         condition: service_healthy
-    image: quay.io/wanaku/wanaku-tool-service-duckduckgo:latest
+    image: quay.io/wanaku/wanaku-tool-service-duckduckgo:release-prep
     pull_policy: always
     ports:
       - "9001:9000"
@@ -28,7 +28,7 @@ services:
       - wanaku_services:/home/default/.wanaku/services
 
   wanaku-router:
-    image: quay.io/wanaku/wanaku-router:latest
+    image: quay.io/wanaku/wanaku-router:release-prep
     pull_policy: always
     ports:
       - "8080:8080"
