--- a/03-camel-assistant/mcp-servers/docker-compose.yaml
+++ b/03-camel-assistant/mcp-servers/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   camel-catalog-mcp:
     environment:
       QUARKUS_HTTP_PORT: 8010
-    image: quay.io/orpiske/camel-catalog-mcp:latest
+    image: quay.io/orpiske/camel-catalog-mcp:camel-catalog-mcp-0.0.1
     pull_policy: always
     ports:
       - "8010:8010"
