--- a/01-getting-started/docker-compose.yml
+++ b/01-getting-started/docker-compose.yml
@@ -1,70 +1,130 @@
-version: '3'
-
 services:
+  init-myservice:
+    image: alpine # Or any small image with chown
+    user: "0:0"
+    command: sh -c "mkdir -p /home/default/.wanaku/services && mkdir -p /home/default/.wanaku/router  && chown -R 185:185 /home/default/.wanaku/"
+    volumes:
+      - ~/.wanaku/:/home/default/.wanaku/
   wanaku-tool-service-http:
-    image: quay.io/wanaku/wanaku-tool-service-http:wanaku-0.0.5
+    environment:
+      WANAKU_SERVICE_REGISTRATION_URI: http://wanaku-router:8080
+    depends_on:
+      wanaku-router:
+        condition: service_healthy
+      init-myservice:
+        condition: service_completed_successfully
+    image: quay.io/wanaku/wanaku-tool-service-http:wanaku-0.0.6
+    pull_policy: always
     ports:
       - "9000:9000"
     volumes:
-      - ~/.wanaku/router:/home/default/.wanaku/router
+      - ~/.wanaku/services:/home/default/.wanaku/services
+
 
   wanaku-tool-service-yaml-route:
-    image: quay.io/wanaku/wanaku-tool-service-yaml-route:wanaku-0.0.5
+    environment:
+      WANAKU_SERVICE_REGISTRATION_URI: http://wanaku-router:8080
+    depends_on:
+      wanaku-router:
+        condition: service_healthy
+      init-myservice:
+        condition: service_completed_successfully
+    image: quay.io/wanaku/wanaku-tool-service-yaml-route:wanaku-0.0.6
+    pull_policy: always
     ports:
       - "9001:9000"
     volumes:
-      - ~/.wanaku/router:/home/default/.wanaku/router
+      - ~/.wanaku/services:/home/default/.wanaku/services
 
   # Uncomment if you want to enable Kafka
   wanaku-tool-service-kafka:
-    image: quay.io/wanaku/wanaku-tool-service-kafka:wanaku-0.0.5
+    environment:
+      WANAKU_SERVICE_REGISTRATION_URI: http://wanaku-router:8080
+    depends_on:
+      wanaku-router:
+        condition: service_healthy
+      init-myservice:
+        condition: service_completed_successfully
+    image: quay.io/wanaku/wanaku-tool-service-kafka:wanaku-0.0.6
+    pull_policy: always
     ports:
       - "9003:9000"
     volumes:
-      - ~/.wanaku/router:/home/default/.wanaku/router
+      - ~/.wanaku/services:/home/default/.wanaku/services
 
   wanaku-tool-service-tavily:
-    image: quay.io/wanaku/wanaku-tool-service-tavily:wanaku-0.0.5
-    #    environment:
-    #      TAVILY_API_KEY: include-you-api-key-here
+    environment:
+      WANAKU_SERVICE_REGISTRATION_URI: http://wanaku-router:8080
+    depends_on:
+      wanaku-router:
+        condition: service_healthy
+      init-myservice:
+        condition: service_completed_successfully
+    image: quay.io/wanaku/wanaku-tool-service-tavily:wanaku-0.0.6
+    pull_policy: always
     ports:
       - "9006:9000"
     volumes:
-      - ~/.wanaku/router:/home/default/.wanaku/router
+      - ~/.wanaku/services:/home/default/.wanaku/services
 
   wanaku-provider-file:
-    image: quay.io/wanaku/wanaku-provider-file:wanaku-0.0.5
+    environment:
+      WANAKU_SERVICE_REGISTRATION_URI: http://wanaku-router:8080
+    depends_on:
+      wanaku-router:
+        condition: service_healthy
+      init-myservice:
+        condition: service_completed_successfully
+    image: quay.io/wanaku/wanaku-provider-file:wanaku-0.0.6
+    pull_policy: always
     ports:
       - "9002:9000"
     volumes:
-      - ~/.wanaku/router:/home/default/.wanaku/router
+      - ~/.wanaku/:/home/default/.wanaku/
 
   wanaku-provider-ftp:
-    image: quay.io/wanaku/wanaku-provider-ftp:wanaku-0.0.5
+    environment:
+      WANAKU_SERVICE_REGISTRATION_URI: http://wanaku-router:8080
+    depends_on:
+      wanaku-router:
+        condition: service_healthy
+      init-myservice:
+        condition: service_completed_successfully
+    image: quay.io/wanaku/wanaku-provider-ftp:wanaku-0.0.6
+    pull_policy: always
     ports:
       - "9004:9000"
     volumes:
-      - ~/.wanaku/router:/home/default/.wanaku/router
+      - ~/.wanaku/services:/home/default/.wanaku/services
 
   # Uncomment the lines below to enable access to AWS S3
   wanaku-provider-s3:
-    image: quay.io/wanaku/wanaku-provider-s3:wanaku-0.0.5
+    environment:
+      WANAKU_SERVICE_REGISTRATION_URI: http://wanaku-router:8080
+    depends_on:
+      wanaku-router:
+        condition: service_healthy
+      init-myservice:
+        condition: service_completed_successfully
+    image: quay.io/wanaku/wanaku-provider-s3:wanaku-0.0.6
+    pull_policy: always
     ports:
       - "9005:9000"
     volumes:
-      - ~/.wanaku/router:/home/default/.wanaku/router
+      - ~/.wanaku/services:/home/default/.wanaku/services
 
   wanaku-router:
-    depends_on:
-      - wanaku-tool-service-http
-      - wanaku-tool-service-kafka
-      - wanaku-tool-service-tavily
-      - wanaku-tool-service-yaml-route
-      - wanaku-provider-file
-      - wanaku-provider-ftp
-      - wanaku-provider-s3
-    image: quay.io/wanaku/wanaku-router:wanaku-0.0.5
+    image: quay.io/wanaku/wanaku-router:wanaku-0.0.6
+    pull_policy: always
     ports:
       - "8080:8080"
     volumes:
       - ~/.wanaku/router:/home/default/.wanaku/router
+    depends_on:
+      init-myservice:
+        condition: service_completed_successfully
+    healthcheck:
+      test: curl -f localhost:8080/api/v1/management/info/version || exit 1
+      interval: 10s
+      timeout: 10s
+      retries: 5
