Use a different HTTP port when running locally

--- a/05-camel-integration-capability/employee-backend/src/main/resources/application.properties
+++ b/05-camel-integration-capability/employee-backend/src/main/resources/application.properties
@@ -16,6 +16,6 @@ quarkus.container-image.name=employee-backend
 quarkus.container-image.tag=1.0.0-SNAPSHOT
 
 # HTTP Configuration
-quarkus.http.port=8080
+%dev.quarkus.http.port=8081
 quarkus.http.cors.enabled=true
 quarkus.http.cors.origins=*
