--- a/05-camel-integration-capability/employee-backend/pom.xml
+++ b/05-camel-integration-capability/employee-backend/pom.xml
@@ -41,6 +41,11 @@
       <artifactId>quarkus-rest-jackson</artifactId>
     </dependency>
 
+      <dependency>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-smallrye-health</artifactId>
+      </dependency>
+
     <!-- Hibernate ORM with Panache -->
     <dependency>
       <groupId>io.quarkus</groupId>
