--- a/05-camel-integration-capability/employee-backend/openshift-deployment.yaml
+++ b/05-camel-integration-capability/employee-backend/openshift-deployment.yaml
@@ -19,13 +19,13 @@ items:
         spec:
           containers:
             - name: employee-backend
-              image: employee/employee-backend:1.0.0-SNAPSHOT
+              image: quay.io/orpiske/employee-backend:1.0.0-SNAPSHOT
               ports:
-                - containerPort: 8080
+                - containerPort: 8081
                   protocol: TCP
               env:
                 - name: QUARKUS_HTTP_PORT
-                  value: "8080"
+                  value: "8081"
               resources:
                 requests:
                   memory: "256Mi"
@@ -36,13 +36,13 @@ items:
               livenessProbe:
                 httpGet:
                   path: /q/health/live
-                  port: 8080
+                  port: 8081
                 initialDelaySeconds: 30
                 periodSeconds: 10
               readinessProbe:
                 httpGet:
                   path: /q/health/ready
-                  port: 8080
+                  port: 8081
                 initialDelaySeconds: 5
                 periodSeconds: 5
 
@@ -56,8 +56,8 @@ items:
       selector:
         app: employee-backend
       ports:
-        - port: 8080
-          targetPort: 8080
+        - port: 8081
+          targetPort: 8081
           protocol: TCP
       type: ClusterIP
 
@@ -72,4 +72,4 @@ items:
         kind: Service
         name: employee-backend-service
       port:
-        targetPort: 8080
+        targetPort: 8081
