--- a/06-camel-integration-capability-existing-route/sample-routes/camel-core-examples/cat-facts-example/pom.xml
+++ b/06-camel-integration-capability-existing-route/sample-routes/camel-core-examples/cat-facts-example/pom.xml
@@ -81,13 +81,8 @@
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>ai.wanaku</groupId>
-                    <artifactId>camel-integration-capability-common</artifactId>
-                    <version>0.1.0-SNAPSHOT</version>
-                </dependency>
-                <dependency>
-                    <groupId>ai.wanaku</groupId>
-                    <artifactId>camel-integration-capability-plugin</artifactId>
+                    <groupId>ai.wanaku.sdk</groupId>
+                    <artifactId>capabilities-runtime-camel-plugin</artifactId>
                     <version>0.1.0-SNAPSHOT</version>
                 </dependency>
             </dependencies>
