--- a/06-camel-integration-capability-existing-route/sample-routes/camel-jbang-examples/pom.xml
+++ b/06-camel-integration-capability-existing-route/sample-routes/camel-jbang-examples/pom.xml
@@ -4,17 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ai.wanaku.demos</groupId>
-    <artifactId>sample-routes</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>ai.wanaku.demos</groupId>
+        <artifactId>sample-routes</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <artifactId>camel-jbang-examples</artifactId>
     <packaging>pom</packaging>
 
-    <name>Wanaku Sample Routes</name>
-    <description>Collection of Camel-based applications for use with Wanaku</description>
+    <name>Camel JBang Examples</name>
+    <description>Camel JBang examples using YAML DSL</description>
 
     <modules>
-        <module>camel-core-examples</module>
-        <module>camel-jbang-examples</module>
+        <module>cat-facts-jbang-example</module>
     </modules>
 
 </project>
